--- a/Métricas_de_avaliação.ipynb
+++ b/Métricas_de_avaliação.ipynb
@@ -26,10 +26,10 @@
     "\n",
     "Matriz de Confusão (1)\n",
     "\n",
-    "Real\\Predito | Gato | Não Gato |\n",
+    "Real\\Predito | Gato | Não Gato \n",
     ":----|:----:|:----:\n",
-    "Gato | 24 | 6 |\n",
-    "Não Gato | 4 | 16 |\n",
+    "Gato | 24 | 6 \n",
+    "Não Gato | 4 | 16 \n",
     "\n",
     "\n",
     "Na primeira linha, tem-se os valores reais da classe 1 (Gato) pelo seu valor predito, onde podemos observar que:\n",
