--- a/Métricas_de_avaliação.ipynb
+++ b/Métricas_de_avaliação.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "A imagem abaixo exemplifica uma matriz de confusão com apenas 2 classes.\n",
     "\n",
-    "<img src=\"Metricas_de_avaliacao/Matriz_de_Confusão.jpg\">\n",
+    "<img src=\"Matriz_de_Confusão.jpg\">\n",
     "\n",
     "Supondo que temos que classificar um dataset com as classes *gato* e *não gato* e obtivemos a seguinte matriz de confusão:\n",
     "\n",
