--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -19,17 +19,17 @@
     "\n",
     "A imagem abaixo exemplifica uma matriz de confusão com apenas 2 classes.\n",
     "\n",
-    "<img src=\"imagens_metricas\\Matriz_de_Confusão.jpg\">\n",
+    "<img src=\"imagens_metricas\Matriz_de_Confusão.jpg\">\n",
     "\n",
     "Supondo que temos que classificar um dataset com as classes *gato* e *não gato* e obtivemos a seguinte matriz de confusão:\n",
     "\n",
     "\n",
     "Matriz de Confusão (1)\n",
     "\n",
-    "Real\\Predito | Gato | Não Gato |\n",
+    "Real\\Predito | Gato | Não Gato \n",
     ":----|:----:|:----:\n",
-    "Gato | 24 | 6 |\n",
-    "Não Gato | 4 | 16 |\n",
+    "Gato | 24 | 6 \n",
+    "Não Gato | 4 | 16 \n",
     "\n",
     "\n",
     "Na primeira linha, tem-se os valores reais da classe 1 (Gato) pelo seu valor predito, onde podemos observar que:\n",
