--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "A imagem abaixo exemplifica uma matriz de confusão com apenas 2 classes.\n",
     "\n",
-    "<img src=\"imagens_metricas\\Matriz_de_Confusão.jpg\">\n",
+    "<img src="imagens_metricas\Matriz_de_Confusão.jpg">\n",
     "\n",
     "Supondo que temos que classificar um dataset com as classes *gato* e *não gato* e obtivemos a seguinte matriz de confusão:\n",
     "\n",
@@ -199,9 +199,9 @@
     "\n",
     "y | y_predito | prob\n",
     ":----:|:----: | :----:\n",
-    "1 | 1 | 0.8 |\n",
-    "1 | 1 | 0.9 |\n",
-    "1 | 0 | 0.3 |\n",
+    "1 | 1 | 0.8 \n",
+    "1 | 1 | 0.9 \n",
+    "1 | 0 | 0.3 \n",
     "\n",
     "\n",
     "$$\n",
