--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "A imagem abaixo exemplifica uma matriz de confusão com apenas 2 classes.\n",
     "\n",
-    "<img src="imagens_metricas\Matriz_de_Confusão.jpg">\n",
+    "<img src=\"imagens_metricas/Matriz_de_Confusão.jpg"\>\n",
     "\n",
     "Supondo que temos que classificar um dataset com as classes *gato* e *não gato* e obtivemos a seguinte matriz de confusão:\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "AUC = 1\n",
     "\n",
-    "<img src=\"imagens_metricas\\AUC_1.png\"> \n",
+    "<img src=\"imagens_metricas/AUC_1.png\"> \n",
     "<img src=\"imagens_metricas\\ROC_1.png\">\n",
     "                    \n",
     "AUC = 0.7\n",
