--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -153,21 +153,21 @@
     "AUC = 1\n",
     "\n",
     "<img src=\"imagens_metricas/AUC_1.png\"> \n",
-    "<img src=\"imagens_metricas\\ROC_1.png\">\n",
+    "<img src=\"imagens_metricas/ROC_1.png\">\n",
     "                    \n",
     "AUC = 0.7\n",
     "\n",
-    "<img src=\"imagens_metricas\\AUC_07.png\">\n",
-    "<img src=\"imagens_metricas\\ROC_07.png\">\n",
+    "<img src=\"imagens_metricas/AUC_07.png\">\n",
+    "<img src=\"imagens_metricas/ROC_07.png\">\n",
     "\n",
     "AUC = 0.5\n",
     "\n",
-    "<img src=\"imagens_metricas\\AUC_05.png\">\n",
-    "<img src=\"imagens_metricas\\ROC_05.png\">\n",
+    "<img src=\"imagens_metricas/AUC_05.png\">\n",
+    "<img src=\"imagens_metricas/ROC_05.png\">\n",
     "\n",
     "AUC = 0\n",
-    "<img src=\"imagens_metricas\\AUC_0.png\">\n",
-    "<img src=\"imagens_metricas\\ROC_0.png\">"
+    "<img src=\"imagens_metricas/AUC_0.png\">\n",
+    "<img src=\"imagens_metricas/ROC_0.png\">"
    ]
   },
   {
