--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -181,7 +181,7 @@
     "Para calcular o Log Loss é necessário ter a probabilidade de cada classe, ao invés de apenas o resultado da classe final (aquela com maior probabilidade). A fórmula é dada por:\n",
     "\n",
     "\n",
-    "<img src=\"imagens_metricas\\logloss.png\">\n",
+    "<img src=\"imagens_metricas/logloss.png\">\n",
     "\n",
     "\n",
     "Onde:\n",
@@ -192,7 +192,7 @@
     "\n",
     "Quando existem apenas duas classes, a fórmula pode ser simplificada para:\n",
     "\n",
-    "<img src=\"imagens_metricas\\logloss2.png\">\n",
+    "<img src=\"imagens_metricas/logloss2.png\">\n",
     "\n",
     "ou seja, supondo que temos a tabela a seguir\n",
     "\n",
