--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "É a área da curva formada pelo gráfico entre VP e FP\n",
     "\n",
-    "<img src=\"imagens_metricas\\AUC_ROC.png\">\n",
+    "<img src=\"imagens_metricas/AUC_ROC.png\">\n",
     "\n",
     "Quanto maior a AUC, melhor será o modelo em prever 0s como 0s e 1s como 1s. \n",
     "\n",
