--- a/MétricasdeAvaliação_Regressao.ipynb
+++ b/MétricasdeAvaliação_Regressao.ipynb
@@ -21,13 +21,13 @@
     "\n",
     "Suponha que temos o exemplo abaixo:\n",
     "\n",
-    "y | y_predito | Erro |\n",
+    "y | y_predito | Erro \n",
     ":----|:----:|:----:\n",
-    "3 | 3,1| +0,1 |\n",
-    "3 | 4,8| +1,8 |\n",
-    "3 | 2,2| -0,8 |\n",
-    "3 | 2,0| -1,0 |\n",
-    "3 | 2,9| -0,1 |\n",
+    "3 | 3,1| +0,1 \n",
+    "3 | 4,8| +1,8 \n",
+    "3 | 2,2| -0,8 \n",
+    "3 | 2,0| -1,0 \n",
+    "3 | 2,9| -0,1 \n",
     "\n",
     "Como ME é o erro médio, teremos que\n",
     "\n",
@@ -125,13 +125,13 @@
     "\n",
     "Usando a mesmo exemplo, teremos:\n",
     "\n",
-    "y | y_predito | Erro |\n",
+    "y | y_predito | Erro \n",
     ":----|:----:|:----:\n",
-    "3 | 3,1| +3,3% |\n",
-    "3 | 4,8| +60,0% |\n",
-    "3 | 2,2| -26,6% |\n",
-    "3 | 2,0| -33,3% |\n",
-    "3 | 2,9| -4,0% |\n",
+    "3 | 3,1| +3,3% \n",
+    "3 | 4,8| +60,0% \n",
+    "3 | 2,2| -26,6% \n",
+    "3 | 2,0| -33,3% \n",
+    "3 | 2,9| -4,0% \n",
     "\n",
     "Portanto:\n",
     "\n",
@@ -187,7 +187,7 @@
     "A imagem abaixo exemplifica melhor essa relação\n",
     "\n",
     "\n",
-    "<img src=\"imagens_metricas\\R2.png\" width=\"400\" \n",
+    "<img src=\"imagens_metricas/R2.png\" width=\"400\" \n",
     "     height=\"500\" > \n",
     "\n",
     "\n",
