--- a/MétricasdeAvaliação_ViesVsVariancia.ipynb
+++ b/MétricasdeAvaliação_ViesVsVariancia.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "A imagem abaixo exemplifica melhor esse conceito.\n",
     "\n",
-    "<img src = 'imagens_metricas\\ViesVariancia.png'>\n",
+    "<img src = 'imagens_metricas/ViesVariancia.png'>\n",
     "\n",
     "Um excelente vídeo que explica esse conceito é do Andrew Ng.\n",
     "Link: https://www.coursera.org/lecture/probabilistic-graphical-models-3-learning/diagnosing-bias-vs-variance-mBXLD"
