--- a/MétricasdeAvaliação_Classificacao.ipynb
+++ b/MétricasdeAvaliação_Classificacao.ipynb
@@ -220,7 +220,7 @@
     "Log Loss = 0.1312\n",
     "$$\n",
     "\n",
-    "**notice que a terceira amostra acarretou em um aumento muito significativo ao erro**\n",
+    "**obs: a terceira amostra acarretou em um aumento muito significativo ao erro**\n",
     " \n",
     "\n"
    ]
