--- a/MétricasdeAvaliação_Regressao.ipynb
+++ b/MétricasdeAvaliação_Regressao.ipynb
@@ -180,7 +180,7 @@
     "Para calcular o R², temos que:\n",
     "\n",
     "$$\n",
-    "R² =  \\frac{\sum (y Predito - y Medio)}{\sum (y - y Medio)}\n",
+    "R² =  \\frac{somatorio (y Predito - y Medio)}{somatorio (y - y Medio)}\n",
     "$$\n",
     "\n",
     "\n",
