--- a/MétricasdeAvaliação_ViesVsVariancia.ipynb
+++ b/MétricasdeAvaliação_ViesVsVariancia.ipynb
@@ -10,11 +10,11 @@
     "## Viés vs Variância (Bias and Variance)\n",
     "\n",
     "\n",
-    "Em poucas palavras, **Viés é o erro do algorítimo na fase de treino**.\n",
+    "Em poucas palavras, **Viés é o erro do algorítimo**.\n",
     "\n",
-    "Para aumentar o vies, é necessário aprimorar a performance do algorítimo, utilizando diferentes técinas de, como Data Prep, utilizando outros algorítimos, etc.\n",
+    "Para aumentar o vies, é necessário aprimorar a performance do algorítimo, utilizando diferentes técinas, como Data Prep, utilizando outros algorítimos, etc.\n",
     "\n",
-    "Por outro lado, a **Variância é a diferença entre o erro da fase de treino** (azul) **com o erro da fase de teste** (vermelho).\n",
+    "Por outro lado, a **Variância é a sensibilidade excessiva do modelo devido à pequenas variações dos dados**.\n",
     "\n",
     "Alta variância significa que há uma diferença grande entre os resultados de ambas as fases, ou seja, nesse caso, temos um overfiting. Em casos onde temos uma variância baixa, porém um erro elevado em ambas as fases,o algorítmo esta com um underfiting. Por fim, quanto menor a variância e menor o viés, melhor está o algorítimo, ou seja, balanced fit.\n",
     "\n",
